feat: :sparkles: The delete was created in the rest api
The delete was created in the rest api
