# src/api/rest/user.go
@@ -1,6 +1,7 @@
 package rest
 
 import (
+	"development-environment-api-go-manager/src/db/repository"
 	"development-environment-api-go-manager/src/models"
 	"log"
 	"net/http"
@@ -11,6 +12,7 @@ import (
 
 type UserRepository interface {
 	ReadUser(id int64) (*models.UserResponse, error)
+	DeleteUser(id int64) error
 }
 
 type UserServiceApi struct {
@@ -28,7 +30,7 @@ func NewUserHandlers(repository UserRepository) *UserServiceApi {
 // @Accept  json
 // @Produce  json
 // @Param   id     path    string     true        "User ID"
-// @Success 200 {object} models.User
+// @Success 200 {object} models.UserResponse
 // @Failure 400 {object} models.NotFountResponse
 // @Router /users/{id} [get]
 func (usa *UserServiceApi) ReadUser(c *gin.Context) {
@@ -56,5 +58,46 @@ func (usa *UserServiceApi) ReadUser(c *gin.Context) {
     c.JSON(http.StatusOK, model)
 }
 
+// @Tags users
+// @Summary Delete user by ID
+// @Description Delete user by ID
+// @Tags users
+// @Accept  json
+// @Produce  json
+// @Param   id     path    string     true        "User ID"
+// @Success 200 {object} models.UserResponse
+// @Failure 400 {object} models.NotFountResponse
+// @Failure 404 {object} models.NotFountResponse
+// @Router /users/{id} [delete]
+func (usa *UserServiceApi) DeleteUser(c *gin.Context) {
+	
+    // Obtener el ID del usuario desde los parámetros de la URL
+    userID := c.Param("id")
+	
+
+    // Convertir userID de string a int64
+    id, err := strconv.ParseInt(userID, 10, 64)
+    if err != nil {
+        log.Println("Error while parsing id:", err)
+        c.JSON(http.StatusBadRequest, gin.H{"error": "Invalid user ID"})
+        return
+    }
+
+    // Llamar al método DeleteUser del repositorio
+    err = usa.repository.DeleteUser(id)
+    if err != nil {
+        if err == repository.ErrUserNotFound {
+            log.Println("User not found:", err)
+            c.JSON(http.StatusNotFound, gin.H{"error": "User not found"})
+            return
+        }
+        log.Println("Error while deleting user:", err)
+        c.JSON(http.StatusInternalServerError, gin.H{"error": "Internal Server Error"})
+        return
+    }
+
+    // Devolver un mensaje de éxito en la respuesta
+    c.JSON(http.StatusOK, gin.H{"message": "User deleted successfully"})
+}
 
 
